--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -4,7 +4,7 @@
     align-items: center;
 }
 
-@mixin flex-between {
+@mixin flex-between-center {
     display: flex;
     justify-content: space-between;
     align-items: center;
