--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,18 +6,10 @@
     right: 5px;
     left: 5px;
     z-index: 1;
-    // opacity: 0;
-    // animation: revealHeader 1s 1s forwards;
 }
 
-// @keyframes revealHeader {
-//     to {
-//         opacity: 1;
-//     }
-// }
-
 .header-top {
-    @include flex-between;
+    @include flex-between-center;
     height: 30px;
     padding: 0 25px;
 
@@ -42,7 +34,7 @@
 }
 
 .header-bottom__container {
-    @include flex-between;
+    @include flex-between-center;
     margin-top: 30px;
 }
 
@@ -59,13 +51,8 @@
 }
 
 .nav {
-    @include flex-between;
+    @include flex-between-center;
     width: 50%;
-}
-
-.nav-list {
-    @include flex-between;
-    width: 100%;
 }
 
 .nav-list__dropdown {
@@ -74,13 +61,14 @@
 
 .nav-list__dropdown-list {
     position: absolute;
+    left: 50%;
+    transform: translate(-50%, 30px);
     z-index: 1;
     width: max-content;
     background: var(--bg-clr);
     border-radius: 30px;
     padding: 10px;
     border: 1px solid var(--border-25);
-    transform: translateY(30px);
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s, transform 0.3s;
@@ -88,15 +76,12 @@
 
 .nav-list__dropdown:hover .nav-list__dropdown-list {
     opacity: 1;
-    transform: translateY(0);
+    transform: translate(-50%, 0);
     pointer-events: all;
 }
 
 .nav__link {
-    // @include grid-center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-center;
     column-gap: 5px;
     height: 40px;
     border-radius: 20px;
@@ -119,14 +104,17 @@
     background: var(--txt-clr);
 }
 
-.nav__btn-link {
+.nav__appointment-link {
     border: 1px solid var(--accent-clr);
 }
 
-.nav__find-us-icon,
-.nav__contact-icon {
+.nav__contacts-btn,
+.nav__appointment-btn {
     display: none;
-    place-content: center;
+}
+
+.nav__appointment-link-btn,
+.nav__contacts-link {
     height: 40px;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
@@ -190,7 +178,7 @@
 }
 
 .menu-link {
-    @include flex-between;
+    @include flex-between-center;
     height: 60px;
     transition: color 0.15s;
 
@@ -199,23 +187,17 @@
     }
 }
 
-.menu-arrow-number {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 5px;
-}
-
 .menu-down-arrow-wrapper {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     right: 50px;
-    display: grid;
-    place-content: center;
+    @include grid-center;
     width: 40px;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 0.15s;
 
     &:hover {
         background: var(--accent-clr);
@@ -243,18 +225,12 @@
 }
 
 @media (max-width: 1200px) {
-    .nav__btn {
+    .nav__appointment {
         display: none;
     }
 
-    .nav__contact-icon {
-        display: grid;
-    }
-
-    .nav {
-        .nav-list {
-            width: 85%;
-        }
+    .nav__appointment-btn {
+        display: initial;
     }
 }
 
@@ -267,31 +243,18 @@
         padding: 0 15px;
     }
 
-    .nav__find-us-item {
+    .nav__contacts {
         display: none;
     }
 
-    .nav__find-us-icon {
-        display: grid;
-    }
-
-    .nav {
-        .nav-list {
-            width: 75%;
-        }
+    .nav__contacts-btn {
+        display: initial;
     }
 }
 
 @media (max-width: 800px) {
     .nav {
-        display: flex;
-        justify-content: flex-end;
-        column-gap: 15px;
-        width: auto;
-
-        .nav-list {
-            display: none;
-        }
+        display: none;
     }
 }
 
