--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -4,6 +4,12 @@
     align-items: center;
 }
 
+@mixin flex-start-center {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 @mixin flex-between-center {
     display: flex;
     justify-content: space-between;
