--- a/src/components/PageTitle/PageTitle.scss
+++ b/src/components/PageTitle/PageTitle.scss
@@ -1,11 +1,11 @@
 @use "./../../mixins" as *;
 
 .page-title {
-    margin: 160px 0 30px;
+    padding: 130px 0 0;
 }
 
 .links-container {
-    padding: 30px 30px 0;
+    padding: 0 30px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -41,15 +41,15 @@
 
 .page-title__title {
     font-size: 3rem;
-    padding: 0 30px 30px;
+    padding: 0 30px;
 }
 
 @media (max-width: 900px) {
     .links-container {
-        padding: 30px 15px 0;
+        padding: 0 15px;
     }
 
     .page-title__title {
-        padding: 0 15px 30px;
+        padding: 0 15px;
     }
 }
