--- a/src/pages/PriceList/PriceList.scss
+++ b/src/pages/PriceList/PriceList.scss
@@ -1,7 +1,3 @@
-.price-list {
-    // padding: 0 0 30px;
-}
-
 .price-list__wrapper {
     padding: 0 30px;
 }
@@ -9,14 +5,14 @@
 .price-list__table {
     border-collapse: collapse;
     width: 100%;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
 }
 
 .price-list__title {
     text-align: start;
     font-size: 1.5rem;
     font-weight: 500;
-    padding-bottom: 30px;
+    padding: 30px 0;
 }
 
 tr {
@@ -49,7 +45,7 @@ tr:nth-child(odd) td:nth-of-type(2) {
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
-    margin: 0 30px 30px;
+    margin: 0 30px;
 }
 
 .inactive-filter-btn {
@@ -69,7 +65,7 @@ tr:nth-child(odd) td:nth-of-type(2) {
     }
 
     .filter-btn-wrapper {
-        margin: 0 15px 30px;
+        margin: 0 15px;
     }
 }
 
@@ -79,6 +75,6 @@ tr:nth-child(odd) td:nth-of-type(2) {
     }
 
     .filter-btn-wrapper {
-        margin: 0 0 30px;
+        margin: 0;
     }
 }
