--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -50,6 +50,84 @@
     }
 }
 
+.lang-select {
+    margin-left: auto;
+    margin-right: 30px;
+}
+
+// Custom select
+
+.lang-custom-select {
+    position: relative;
+    // width: 100%;
+    width: 100px;
+    height: 40px;
+}
+
+.lang-custom-select__btn {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    padding-left: 10px;
+    text-align: left;
+    background: var(--bg-clr);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    cursor: pointer;
+    transition: border 0.15s;
+
+    &:focus {
+        border: 1px solid var(--accent-clr);
+    }
+}
+
+.lang-custom-select__btn--active {
+    border: 1px solid var(--accent-clr);
+}
+
+.lang-custom-select__btn::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 10px;
+    width: 10px;
+    aspect-ratio: 1 / 1;
+    clip-path: polygon(50% 100%, 0 0, 100% 0);
+    background: var(--txt-clr);
+}
+
+.lang-custom-select__list {
+    display: none;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    background: var(--bg-clr);
+}
+
+.lang-custom-select__list--visible {
+    display: block;
+}
+
+.lang-custom-select__option {
+    @include flex-start-center;
+    height: 40px;
+    border-radius: inherit;
+    padding: 0 10px;
+    cursor: pointer;
+    transition: background-color 0.15s;
+
+    &:hover {
+        background: var(--accent-clr);
+    }
+}
+
+.lang-custom-select__input {
+    display: none;
+}
+
 .nav {
     @include flex-between-center;
     width: 50%;
