--- a/src/pages/PriceList/PriceList.scss
+++ b/src/pages/PriceList/PriceList.scss
@@ -5,7 +5,6 @@
 .price-list__table {
     border-collapse: collapse;
     width: 100%;
-    // margin-bottom: 30px;
 }
 
 .price-list__title {
@@ -48,7 +47,7 @@ tr:nth-child(odd) td:nth-of-type(2) {
     margin: 0 30px;
 }
 
-.inactive-filter-btn {
+.filter-btn {
     height: 60px;
     border-radius: 30px;
     padding: 0 15px;
