--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,8 +1,8 @@
 :root {
     --home-bg-clr: #000;
-    --bg-clr: #000;
+    --bg-clr: #ebfbf4;
     --bg-semi-tp-clr: rgba(0, 0, 0, 0.5);
-    --txt-clr: #fff;
-    --accent-clr: #77df92;
+    --txt-clr: #000000;
+    --accent-clr: #7fd2c8;
     --border-25: rgba(255, 255, 255, 0.25);
 }
