--- a/src/components/BurgerBtn/BurgerBtn.scss
+++ b/src/components/BurgerBtn/BurgerBtn.scss
@@ -1,10 +1,21 @@
+.burger-btn__wrapper {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+
+    span {
+        font-size: 0.75rem;
+    }
+}
+
 .burger-5 {
     position: relative;
     width: 30px;
     height: 0;
     padding: 15px 0;
     cursor: pointer;
-    display: none;
+    display: flex;
     justify-content: flex-end;
     align-items: center;
 }
@@ -14,7 +25,7 @@
     content: "";
     width: 100%;
     height: 2px;
-    background: #fff;
+    background: #000;
     translate: 0 -10px;
     transition: all 0.3s;
 }
@@ -24,7 +35,7 @@
     content: "";
     width: 100%;
     height: 2px;
-    background: #fff;
+    background: #000;
     translate: 0 10px;
     transition: all 0.3s;
 }
@@ -33,7 +44,7 @@
     position: absolute;
     width: 50%;
     height: 2px;
-    background: #fff;
+    background: #000;
     transition: all 0.3s 0.3s;
 }
 
@@ -55,7 +66,7 @@
 }
 
 @media (max-width: 800px) {
-    .burger-5 {
+    .burger-btn__wrapper {
         display: flex;
     }
 }
