--- a/src/components/ToTopBtn/ToTopBtn.scss
+++ b/src/components/ToTopBtn/ToTopBtn.scss
@@ -9,9 +9,10 @@
     place-content: center;
     width: 60px;
     height: 60px;
-    background: rgba(0, 0, 0, 0.25);
-    @include glass-effect;
-    border: 1px solid rgba(255, 255, 255, 0.25);
+    // background: rgba(0, 0, 0, 0.25);
+    background: rgb(2, 216, 220);
+    // @include glass-effect;
+    // border: 1px solid rgba(255, 255, 255, 0.25);
     border-radius: 50%;
     transform: translateY(90px);
     cursor: pointer;
