--- a/src/pages/AboutUs/AboutUs.scss
+++ b/src/pages/AboutUs/AboutUs.scss
@@ -14,12 +14,13 @@
 }
 
 .team-card {
+    padding: 20px;
     text-align: center;
     @include flex-around;
     flex-direction: column;
     width: 100%;
     height: min-content;
-    background: rgba(0, 0, 0, 0.05);
+    background: white;
     border: 1px solid rgba(255, 255, 255, 0.25);
     transition: border 150ms;
 
