--- a/src/components/ToTopBtn/ToTopBtn.scss
+++ b/src/components/ToTopBtn/ToTopBtn.scss
@@ -5,31 +5,35 @@
     right: 30px;
     bottom: 30px;
     z-index: 2;
-    display: grid;
-    place-content: center;
     width: 60px;
-    height: 60px;
-    // background: rgba(0, 0, 0, 0.25);
-    background: rgb(2, 216, 220);
-    // @include glass-effect;
-    // border: 1px solid rgba(255, 255, 255, 0.25);
+    aspect-ratio: 1/1;
+    @include grid-center;
+    background: var(--accent-clr);
     border-radius: 50%;
-    transform: translateY(90px);
     cursor: pointer;
+    transform: translateY(90px);
     transition: transform 300ms;
-
-    div {
-        display: grid;
-        place-content: center;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        img {
-            width: 30px;
-        }
-    }
 }
 
-.to-top-btn--translate {
+.to-top-btn--active {
     transform: translateY(0);
+}
+
+.progress {
+    width: 50px;
+    aspect-ratio: 1/1;
+    @include grid-center;
+    border-radius: inherit;
+}
+
+.inner-to-top-btn {
+    width: 45px;
+    aspect-ratio: 1/1;
+    @include grid-center;
+    background: var(--accent-clr);
+    border-radius: inherit;
+
+    img {
+        width: 30px;
+    }
 }
