--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,4 +5,5 @@
     --txt-clr: #000000;
     --accent-clr: #7fd2c8;
     --border-25: rgba(255, 255, 255, 0.25);
+    --cstm-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
