--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,6 +6,7 @@
     right: 0;
     left: 0;
     z-index: 100;
+    padding: 0 30px;
     opacity: 0;
     animation: revealHome 1s forwards;
 }
@@ -17,13 +18,11 @@
 }
 
 .header-top {
+    min-height: 30px;
     @include flex-between-center;
-    height: 30px;
-    padding: 0 25px;
 
     a {
-        transition: color 0.15s;
-        color: black;
+        transition: color 0.3s;
 
         &:hover {
             color: var(--accent-clr);
@@ -32,26 +31,15 @@
 }
 
 .header-bottom {
-    display: flex;
-    flex-direction: column;
     min-height: 100px;
-    border-radius: 50px;
-    padding: 0 25px;
-    // background: var(--bg-semi-tp-clr);
-    // @include glass-effect;
-    // border: 1px solid var(--border-25);
-}
-
-.header-bottom__container {
     @include flex-between-center;
-    margin-top: 30px;
 }
 
-.header__logo {
+.header-bottom__logo {
     @include flex-center;
 
     img {
-        width: clamp(35px, 4vw, 40px);
+        width: clamp(35px, 5vw, 40px);
     }
 
     span {
@@ -59,132 +47,14 @@
     }
 }
 
-.lang-select {
-    margin-left: auto;
-    margin-right: 30px;
-}
-
-// Custom select
-
-.lang-custom-select {
-    position: relative;
-    // width: 100%;
-    width: 100px;
-    height: 40px;
-}
-
-.lang-custom-select__btn {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    padding-left: 10px;
-    text-align: left;
-    // background: var(--bg-clr);
-    border: 1px solid var(--accent-clr);
-    cursor: pointer;
-    transition: border 0.3s;
-
-    &:focus {
-        border: 1px solid var(--accent-clr);
-    }
-}
-
-.lang-custom-select__btn--active {
-    border: 1px solid var(--accent-clr);
-}
-
-.lang-custom-select__btn::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 10px;
-    width: 10px;
-    aspect-ratio: 1 / 1;
-    clip-path: polygon(50% 100%, 0 0, 100% 0);
-    background: var(--txt-clr);
-}
-
-.lang-custom-select__list {
-    // display: none;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    border-radius: 20px;
-    border: 1px solid rgba(255, 255, 255, 0.25);
-    background: var(--bg-clr);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    opacity: 0;
-    transform: translateY(30px);
-    pointer-events: none;
-    transition: opacity 0.3s, transform 0.3s;
-}
-
-.lang-custom-select__list--visible {
-    opacity: 1;
-    transform: translateY(0);
-    pointer-events: all;
-}
-
-.lang-custom-select__option {
-    @include flex-start-center;
-    height: 40px;
-    border-radius: inherit;
-    padding: 0 10px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-
-    &:hover {
-        background: var(--accent-clr);
-    }
-}
-
-.lang-custom-select__option--active {
-    background: var(--accent-clr);
-}
-
-.lang-custom-select__input {
-    display: none;
-}
-
 .nav {
     @include flex-between-center;
     width: 50%;
 }
 
-.nav-list__dropdown {
-    position: relative;
-    z-index: 20;
-}
-
-.nav-list__dropdown-list {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 30px);
-    z-index: 20;
-    width: max-content;
-    // background: var(--bg-clr);
-    background: var(--bg-clr);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 30px;
-    padding: 10px;
-    // border: 1px solid var(--border-25);
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.3s, transform 0.3s;
-}
-
-.nav-list__dropdown:hover .nav-list__dropdown-list {
-    opacity: 1;
-    transform: translate(-50%, 0);
-    pointer-events: all;
-}
-
 .nav__link {
-    @include flex-center;
-    column-gap: 5px;
     height: 40px;
+    @include flex-center;
     border-radius: 20px;
     padding: 0 10px;
     transition: background-color 0.3s;
@@ -198,158 +68,61 @@
     background: var(--accent-clr);
 }
 
-.down-arrow {
-    width: 10px;
-    aspect-ratio: 1 / 1;
-    clip-path: polygon(50% 100%, 0 0, 100% 0);
-    background: var(--txt-clr);
-}
+// dd is a shorthand for dropdown
 
-.nav__appointment-link {
-    border: 1px solid var(--accent-clr);
-}
-
-.nav__contacts-btn,
-.nav__appointment-btn {
-    display: none;
-}
-
-.nav__appointment-link-btn,
-.nav__contacts-link {
-    height: 40px;
-    aspect-ratio: 1 / 1;
-    border-radius: 50%;
-    transition: background-color 0.15s;
-
-    &:hover {
-        background: var(--accent-clr);
-    }
-}
-
-// Menu
-
-.header-bottom__grid {
-    display: grid;
-    grid-template-rows: 0fr;
-    overflow: hidden;
-    transition: all 0.3s ease-out;
-
-    .menu-list {
-        overflow: hidden;
-
-        li {
-            border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-        }
-    }
-}
-
-.header-bottom__grid--active {
-    grid-template-rows: 1fr;
-    padding: 30px 0;
-}
-
-.menu-dropdown__wrapper {
-    display: grid;
-    grid-template-rows: 0fr;
-    overflow: hidden;
-    transition: grid-template-rows 0.5s;
-}
-
-.menu-dropdown__wrapper--active {
-    grid-template-rows: 1fr;
-}
-
-.menu-dropdown-list {
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-.menu-item {
-    opacity: 0;
-}
-
-.menu-item--active {
-    opacity: 1;
-    transition: opacity 600ms 150ms;
-}
-
-.menu-link__wrapper {
+.nav__dd-wrapper {
     position: relative;
 }
 
-.menu-link {
-    @include flex-between-center;
-    height: 60px;
-    transition: color 0.15s;
-
-    &:hover {
-        color: var(--accent-clr);
-    }
-}
-
-.menu-down-arrow-wrapper {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 50px;
-    @include grid-center;
-    width: 40px;
-    aspect-ratio: 1 / 1;
-    border-radius: 50%;
+.nav__dd-btn {
+    height: 40px;
+    @include flex-center;
+    column-gap: 5px;
+    border-radius: 20px;
+    padding: 0 10px;
     cursor: pointer;
-    transition: background-color 0.15s;
+    transition: background-color 0.3s;
 
     &:hover {
         background: var(--accent-clr);
     }
 }
 
-.menu-down-arrow {
+.nav__dd-btn-icon {
     width: 10px;
     aspect-ratio: 1 / 1;
     clip-path: polygon(50% 100%, 0 0, 100% 0);
     background: var(--txt-clr);
+    transition: rotate 0.3s;
 }
 
-.dropdown-menu-link {
-    margin: 5px 0;
-    transition: color 0.15s;
-
-    &:hover {
-        color: var(--accent-clr);
-    }
+.nav__dd-wrapper:hover .nav__dd-btn-icon {
+    rotate: 180deg;
 }
 
-.menu-link--active {
-    color: var(--accent-clr);
+.nav__dd {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 30px);
+    width: max-content;
+    background: var(--bg-clr);
+    box-shadow: var(--cstm-box-shadow);
+    border-radius: 20px;
+    padding: 10px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s, transform 0.3s;
 }
 
-@media (max-width: 1200px) {
-    .nav__appointment {
-        display: none;
-    }
-
-    .nav__appointment-btn {
-        display: initial;
-    }
+.nav__dd-wrapper:hover .nav__dd {
+    opacity: 1;
+    transform: translate(-50%, 0);
+    pointer-events: all;
 }
 
 @media (max-width: 900px) {
-    .header-top {
+    .header {
         padding: 0 15px;
-    }
-
-    .header-bottom {
-        padding: 0 15px;
-    }
-
-    .nav__contacts {
-        display: none;
-    }
-
-    .nav__contacts-btn {
-        display: initial;
     }
 }
 
@@ -360,7 +133,7 @@
 }
 
 @media (max-width: 350px) {
-    .header__logo {
+    .header-bottom__logo {
         span {
             display: none;
         }
