--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -16,6 +16,12 @@
     align-items: center;
 }
 
+@mixin flex-between-start {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
 @mixin flex-around {
     display: flex;
     justify-content: space-around;
