--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,56 +1,26 @@
 @use "./../../mixins" as *;
 
-.none {
-    display: none;
-}
-
 .footer {
-    @include flex-start-center;
+    display: flex;
     flex-direction: column;
+    row-gap: 30px;
     margin-top: auto;
-    min-height: 100px;
     background: #fff;
+    padding: 30px;
 }
 
-.footer__link {
-    display: grid;
-    place-items: center;
-    height: 30px;
-    border-radius: 15px;
-    padding: 0 7.5px;
-    transition: all 150ms;
-
-    &:hover {
-        background: var(--accent-clr);
-        color: #fff;
-    }
+.footer-top {
+    @include flex-between-start;
 }
 
-.footer__link--active {
-    background: var(--accent-clr);
-    color: #fff;
-}
-
-.footer__header {
-    width: 100%;
+.footer-top__logo {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
     flex-direction: column;
-    padding: 0 30px;
-}
 
-.footer__header-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 100%;
-}
+    div {
+        @include flex-center;
+    }
 
-.footer__header-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     img {
         width: 50px;
     }
@@ -59,22 +29,20 @@
     }
 }
 
-.footer__header-working-hours {
+.footer-top__working-hours {
     width: 300px;
 
     p {
         font-size: 1.5rem;
         font-weight: 500;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
 }
 
 .working-hours {
     li {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         height: 30px;
+        @include flex-between-center;
         border-radius: 15px;
         padding: 0 7.5px;
     }
@@ -82,21 +50,19 @@
 
 .day--active {
     background: var(--accent-clr);
-    color: #fff;
 }
 
-.footer__header-bottom {
+.footer-middle {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
-    width: 100%;
 }
 
-.footer__header-navigation {
+.footer-middle__nav-list-wrapper {
     p {
         font-size: 1.5rem;
         font-weight: 500;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
     ul {
         display: flex;
@@ -105,11 +71,11 @@
     }
 }
 
-.footer__header-contact-us {
+.footer-middle__contacts-wrapper {
     p {
         font-size: 1.5rem;
         font-weight: 500;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
     ul {
         display: flex;
@@ -121,20 +87,34 @@
             height: 30px;
             border-radius: 15px;
             padding: 0 7.5px;
-            transition: all 150ms;
+            transition: all 300ms;
 
             &:hover {
                 background: var(--accent-clr);
-                color: #fff;
             }
         }
     }
 }
 
-.footer__bottom {
+.footer__link {
+    height: 30px;
+    @include grid-center;
+    border-radius: 15px;
+    padding: 0 7.5px;
+    transition: all 300ms;
+
+    &:hover {
+        background: var(--accent-clr);
+    }
+}
+
+.footer__link--active {
+    background: var(--accent-clr);
+}
+
+.footer-bottom {
     @include flex-center;
     flex-direction: column;
-    padding-bottom: 30px;
 }
 
 .creator {
@@ -148,27 +128,30 @@
 }
 
 @media (max-width: 900px) {
-    .none {
-        display: initial;
+    .footer {
+        padding: 30px 15px;
     }
+}
 
-    .footer__header {
+@media (max-width: 800px) {
+    .footer-middle {
+        row-gap: 30px;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 600px) {
+    .footer-top {
         @include flex-center;
         flex-direction: column;
-        padding: 0 15px;
+        row-gap: 30px;
     }
 
-    .footer__header-top {
-        flex-direction: column;
-    }
-
-    .footer__header-bottom {
-        flex-direction: column;
-    }
-
-    .footer__header-working-hours,
-    .footer__header-navigation,
-    .footer__header-contact-us {
+    .footer-top__working-hours {
         width: 100%;
+    }
+
+    .footer-top__logo {
+        align-items: center;
     }
 }
