--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -1,42 +1,45 @@
 @use "./../../mixins" as *;
 
+.contacts {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+    padding: 30px 0;
+}
+
 .contacts__secondary-info {
     text-align: justify;
     font-size: 1.25rem;
-    padding: 0 30px 30px;
+    padding: 0 30px;
 }
 
 .contacts-details {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
-    padding: 0 30px;
+    background: #fff;
+    padding: 30px;
 
     div {
         width: 100%;
         height: 200px;
         @include flex-center;
         flex-direction: column;
-        border: 1px solid rgba(255, 255, 255, 0.25);
         border-radius: 100px;
-        transition: border 150ms;
-
-        &:hover {
-            border: 1px solid var(--accent-clr);
-        }
+        border: 1px solid var(--accent-clr);
     }
 }
 
 .contacts__phone-img,
 .contacts__email-img,
 .contacts__address-img {
-    width: 40px;
+    width: 30px;
 }
 
 .contacts__phone,
 .contacts__email,
 .contacts__address {
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .contacts__phone-link,
@@ -54,7 +57,7 @@
 
 .contacts-details__address-btn {
     @include grid-center;
-    margin-top: 10px;
+    margin-top: 15px;
     height: 30px;
     border-radius: 15px;
     padding: 0 7.5px;
@@ -68,24 +71,22 @@
 }
 
 .contacts__appointment-title {
-    font-size: 2rem;
+    font-size: clamp(1.5rem, 4vw, 2rem);
     text-align: center;
-    padding-bottom: 30px;
 }
 
 .contacts-form {
-    @include flex-center;
+    display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 7.5px;
     width: 50%;
-    margin: auto;
+    margin: 0 auto;
     padding: 0 30px;
 }
 
 .contacts-form__inputs {
     display: flex;
-    gap: 10px;
-    width: 100%;
+    gap: 7.5px;
 }
 
 .contacts-form__input-wrapper {
@@ -103,12 +104,7 @@
     border-radius: 30px;
     width: 100%;
     padding: 0 15px;
-    border: 1px solid rgba(255, 255, 255, 0.25);
-    transition: border 150ms;
-
-    &:focus {
-        border: 1px solid var(--accent-clr);
-    }
+    border: 1px solid var(--accent-clr);
 }
 
 .contacts-form__label {
@@ -129,7 +125,6 @@
 
 .custom-select {
     position: relative;
-    width: 100%;
     height: 60px;
 }
 
@@ -139,19 +134,15 @@
     height: 100%;
     text-align: left;
     background: var(--bg-clr);
-    border: 1px solid rgba(255, 255, 255, 0.25);
     border-radius: 30px;
     padding-left: 15px;
     cursor: pointer;
-    transition: border 150ms;
-
-    &:focus {
-        border: 1px solid var(--accent-clr);
-    }
+    border: 1px solid var(--accent-clr);
+    transition: background-color 0.3s;
 }
 
 .custom-select__btn--active {
-    border: 1px solid var(--accent-clr);
+    background: var(--accent-clr);
 }
 
 .custom-select__btn::after {
@@ -171,9 +162,10 @@
     position: absolute;
     left: 0;
     width: 100%;
-    border: 1px solid rgba(255, 255, 255, 0.25);
-    border-radius: 30px;
+    padding: 7.5px;
+    border-radius: 15px;
     background: var(--bg-clr);
+    box-shadow: var(--cstm-box-shadow);
 }
 
 .custom-select__list--visible {
@@ -182,10 +174,11 @@
 
 .custom-select__option {
     @include flex-start-center;
-    height: 60px;
-    border-radius: 30px;
+    height: 30px;
+    border-radius: 15px;
     padding: 0 15px;
     cursor: pointer;
+    transition: background-color 0.3s;
 
     &:hover {
         background: var(--accent-clr);
@@ -199,15 +192,17 @@
 input[type="date"],
 input[type="time"] {
     border: 1px solid rgba(255, 255, 255, 0.25);
-    width: 100%;
     height: 60px;
     border-radius: 30px;
     padding-left: 15px;
-    transition: border 150ms;
+    border: 1px solid var(--accent-clr);
+}
 
-    &:focus {
-        border: 1px solid var(--accent-clr);
-    }
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="time"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 .contacts-form__btn {
@@ -216,44 +211,51 @@ input[type="time"] {
     border-radius: 30px;
     padding: 0 15px;
     border: 1px solid var(--accent-clr);
-    width: 100%;
-    transition: background-color 150ms;
+    background: var(--accent-clr);
+    transition: background-color 0.3s;
 
     &:hover {
-        background: var(--accent-clr);
+        background-color: transparent;
     }
 }
 
 .contacts__google-map {
-    width: 100%;
-    height: 250px;
+    height: 300px;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
     .contacts-details {
         grid-template-columns: repeat(2, 1fr);
     }
+}
 
+@media (max-width: 1000px) {
     .contacts-form {
         width: 75%;
     }
 }
 
 @media (max-width: 900px) {
+    .contacts-details {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
     .contacts__secondary-info {
-        padding: 0 15px 30px;
+        padding: 0 15px;
+    }
+
+    .contacts-details {
+        padding: 30px 15px;
+    }
+
+    .contacts-form {
+        padding: 0 15px;
     }
 }
 
 @media (max-width: 700px) {
-    .contacts-details {
-        grid-template-columns: repeat(1, 1fr);
-        padding: 0 0 30px;
-    }
-
     .contacts-form {
         width: 100%;
-        padding: 0 0 30px;
     }
 
     .contacts-form__inputs {
