--- a/src/pages/PriceList/PriceList.scss
+++ b/src/pages/PriceList/PriceList.scss
@@ -1,3 +1,14 @@
+.price-list {
+    opacity: 0;
+    animation: revealPriceList 1s forwards;
+}
+
+@keyframes revealPriceList {
+    to {
+        opacity: 1;
+    }
+}
+
 .price-list__wrapper {
     padding: 0 30px 30px;
 }
@@ -44,7 +55,7 @@ tr:nth-child(odd) td:nth-of-type(2) {
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
-    margin: 0 30px;
+    margin: 30px 30px 0;
 }
 
 .filter-btn {
@@ -64,7 +75,7 @@ tr:nth-child(odd) td:nth-of-type(2) {
     }
 
     .filter-btn-wrapper {
-        margin: 0 15px;
+        margin: 30px 15px 0;
         gap: 15px;
     }
 }
