--- a/src/components/LangSelect/LangSelect.scss
+++ b/src/components/LangSelect/LangSelect.scss
@@ -27,7 +27,7 @@
     width: 10px;
     aspect-ratio: 1 / 1;
     clip-path: polygon(50% 100%, 0 0, 100% 0);
-    background: var(--txt-clr);
+    background: #000;
     pointer-events: none;
     transition: rotate 0.3s;
 }
