--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -176,7 +176,7 @@
     position: relative;
     width: 30px;
     height: 1.5px;
-    background: var(--txt-clr);
+    background: #000;
 }
 
 .faq__btn-icon::after {
@@ -187,7 +187,7 @@
     transform: translate(-50%, -50%);
     width: 1.5px;
     height: 30px;
-    background: var(--txt-clr);
+    background: #000;
     transition: height 0.3s;
 }
 
